# Lydwhitt_tools

./: README.md  lydwhitt_tools-0.1.9-py3-none-any.whl  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/lydwhitt_tools/: KDE.py  __init__.py  filter.py  formula_recalc.py  mahalanobis.py
src/lydwhitt_tools/examples/: KDE.ipynb  geoscore_filter.ipynb  iron_Fe.ipynb  mahalnobis_filter.ipynb  recalc_.ipynb
src/lydwhitt_tools/examples/example_data/: KDE_ExampleData.xlsx  geoscore_filter_ExampleData.xlsx  geoscore_filter_ExampleData2.xlsx
